[gd_scene load_steps=2 format=3 uid="uid://ckff6uklosui1"]

[ext_resource type="Script" uid="uid://b4lk3liifikb2" path="res://Scripts/StartMenu.gd" id="1"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.7

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 0
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="TopicLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Choose Topic:"

[node name="TopicMenu" type="OptionButton" parent="Panel/VBox"]
layout_mode = 2

[node name="ThemeLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Choose Theme:"

[node name="ThemeMenu" type="OptionButton" parent="Panel/VBox"]
layout_mode = 2

[node name="StartButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Start Game"
